# RwxMeme

./: .gitignore  LICENSE.txt  README.md
RwxMeme/: CMakeLists.txt
RwxMeme/RwxMeme/: CMakeLists.txt
RwxMeme/RwxMeme/lib/: VMProtectSDK64.lib
RwxMeme/RwxMeme/src/: entry.cpp  general.h
RwxMeme/RwxMeme/src/driver/: driver_resource.h  intel_driver.cpp  intel_driver.h  magic.cpp  magic.h  memory.cpp  memory.h  nt.h  service.cpp  service.h  utils.cpp  utils.h
RwxMeme/RwxMeme/src/utils/: console.cpp  console.h  executable.cpp  executable.h  vmprotect.h  xor.h
